--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Welcome to Ionic! {{ name }}</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
@@ -13,5 +13,7 @@
   <p>
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
+
   </p>
+  <h4>{{ name }}</h4>
 </ion-content>
