--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,15 +5,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic! {{ name }}</h2>
+  <h2>Bem vindo ao meu primeiro aplicativo =D</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    Este aplicativo apresenta um feed com os filmes mais bem avaliados.
   </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-
-  </p>
-  <h4>{{ name }}</h4>
 </ion-content>
