--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -18,21 +18,9 @@
         Este app terá funções incríveis. Ele foi feito pra te impressionar!
       </p>
       <p>
-        Ficou curioso? <strong> saiba mais</strong>
+        Ficou curioso? <strong> <a (click)="goToTabsPage()">Saiba mais</a></strong>
       </p>
     </div>
-    </ion-slide>
-  
-    <ion-slide class="slide-image">
-        <img src="assets/imgs/slide2.png" alt="">   
-      <h2>Slide 2</h2>
-    </ion-slide>
-  
-    <ion-slide class="slide-image">
-        <img src="assets/imgs/slide3.png" alt="">   
-      <h2>Slide 3</h2>
-
-      <a (click)="goToTabsPage()">Continuar</a>
     </ion-slide>
   
   </ion-slides>
