Adding Camera pluggin

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,4 +9,9 @@
   <p>
     Este aplicativo apresenta um feed com os filmes mais bem avaliados.
   </p>
+<br/>
+
+<br/>
+<p>Faça parte dele também, <a (click)="takePicture()"><strong>tire uma foto</strong></a>!</p>
+<img *ngIf="picture" [src]="picture">
 </ion-content>
